--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <title>Yt Clone</title>
+    <title>Youtube Clone</title>
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
